# clp-cpp

./: .gitmodules  CMakeLists.txt
CMake/: ClpCppHelpers.cmake  clp-cpp-config.cmake.in
clp/: CMakeLists.txt
clp/array/: CMakeLists.txt
clp/error_handling/: CMakeLists.txt
clp/regex_utils/: CMakeLists.txt  ErrorCode.cpp  regex_translation_utils.cpp  regex_translation_utils.hpp
clp/string_utils/: CMakeLists.txt  string_utils.cpp  string_utils.hpp
